tests/baselines/reference/genericCallWithoutArgs.errors.txt
==== tests/cases/compiler/genericCallWithoutArgs.ts (4 errors) ====
    function f<X, Y>(x: X, y: Y) {
    }
    
    f<number,string>.
                    ~
!!! error TS1109: Expression expected.
                     
!!! error TS1003: Identifier expected.
      ~~~~~~
!!! error TS2304: Cannot find name 'number'.
             ~~~~~~
!!! error TS2304: Cannot find name 'string'.